--- a/src/styles/_sign-up.scss
+++ b/src/styles/_sign-up.scss
@@ -1,3 +1,84 @@
-.pass-select {
-  max-width: 10rem;
+.reg {
+  padding: 5rem;
+  position: relative;
+  margin-bottom: 5rem;
+  border: 0.1rem solid rgba(229, 229, 229, 1);
+  border-radius: 0.5rem;
+
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+  }
+}
+
+.reg-top {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
+
+.reg-title {
+  font-size: 2.2rem;
+}
+
+.reg-input-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 3rem;
+}
+
+.reg-input-block {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+
+  label {
+    font-size: 1.2rem;
+  }
+
+  span {
+    color: red;
+  }
+
+  input {
+    border-radius: 0.5rem;
+    border: 0.1rem solid rgba(229, 229, 229, 1);
+    padding: 2rem;
+    height: 5rem;
+    font-size: 1.6rem;
+  }
+}
+
+.split {
+  display: grid;
+  grid-template-columns: minmax(5rem, 10rem) minmax(5rem, 10rem) minmax(
+      10rem,
+      1fr
+    );
+  gap: 3rem;
+}
+
+.split-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 1.4rem;
+}
+
+.reg-btns {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 3rem;
+
+  * {
+    align-self: center;
+  }
+  h2 {
+    font-weight: normal;
+  }
+
+  span {
+    color: red;
+  }
 }
