--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -117,3 +117,59 @@
   flex-direction: column;
   gap: 3rem;
 }
+
+// MODAL WINDOWS
+
+.recovery {
+  z-index: 50;
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+  background: rgba(58, 58, 58, 0.6);
+  display: flex;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.4s all ease;
+
+  &.active {
+    pointer-events: all;
+    opacity: 1;
+    transition: 0.4s all ease;
+  }
+}
+
+.recovery-container {
+  width: 100%;
+  max-width: 58rem;
+  padding: 0 3rem;
+  margin: 0 auto;
+}
+
+.recovery-block {
+  padding: 5rem;
+  background: #fff;
+  border-radius: 0.5rem;
+
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.rec-input {
+  margin-bottom: 0;
+}
+
+.form-title {
+  font-size: 2.2rem;
+}
+
+.recovery-1,
+.recovery-2 {
+  form {
+    gap: 3rem;
+  }
+}
