--- a/src/styles/_side.scss
+++ b/src/styles/_side.scss
@@ -1,15 +1,29 @@
-.side {
-  position: fixed;
-  height: 100vh;
-  left: 0;
-  top: 0;
-  max-width: 40rem;
-  width: 100%;
-  background: $base-green;
+.home {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  transition: 0.4s all ease;
 }
 
-.home {
-  margin-left: 40rem;
+.side-inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
+.side {
+  height: 100vh;
+  max-width: 0rem;
+  width: 100%;
+  background: $base-green;
+  overflow-x: hidden;
+  overflow-y: auto;
+  transition: 0.4s all ease;
+
+  &.active {
+    max-width: 40rem;
+    transition: 0.4s all ease;
+  }
 }
 
 .side-title {
@@ -25,30 +39,55 @@
       border-bottom: 0.1rem solid $dark-green;
 
       &::before {
+        pointer-events: none;
         width: 0.6rem;
         height: 100%;
         position: absolute;
         left: 0;
         top: 0;
         content: "";
-        background: rgba(255, 255, 255, 0);
+        background: rgba(255, 255, 255, 1);
+        opacity: 0;
         transition: 0.4s all ease;
       }
 
       &.active {
         &::before {
-          background: rgba(255, 255, 255, 1);
+          opacity: 1;
           transition: 0.4s all ease;
         }
       }
     }
     h2,
     a {
-      display: block;
+      display: flex;
+      gap: 1.6rem;
       font-size: 1.6rem;
       color: #fff;
       padding: 2.9rem 5rem;
       font-weight: normal;
+      span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
+  }
+}
+
+.side-footer {
+  margin-top: 3rem;
+  display: flex;
+  align-items: flex-end;
+  gap: 1.6rem;
+  padding: 2rem 5rem;
+  background: $dark-green;
+
+  span {
+    font-size: 1.2rem;
+    color: #fff;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
