--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -173,3 +173,14 @@
     gap: 3rem;
   }
 }
+
+.pass-check {
+  display: none;
+  color: red;
+  font-size: 1.2rem;
+  font-weight: bold;
+
+  &.active {
+    display: block;
+  }
+}
