--- a/src/styles/_side.scss
+++ b/src/styles/_side.scss
@@ -8,11 +8,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 100vh;
+  // min-height: 100vh;
+  height: 100%;
 }
 
 .side {
-  height: 100vh;
+  height: 100%;
   max-width: 0rem;
   width: 100%;
   background: $base-green;
