--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -13,9 +13,16 @@
     background: #f2f2f2;
   }
 
-  form {
+  .form-bottom {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+  }
+}
+
+.profile-title {
+  button {
+    padding: 1.8rem 3rem;
+    max-width: 26.2rem;
   }
 }
