stage icons handled

--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -139,8 +139,10 @@
   justify-content: center;
 
   &.active {
-    stroke: $base-green;
-    transition: 0.4s all ease;
+    .lines {
+      stroke: $base-green;
+      transition: 0.4s all ease;
+    }
   }
 }
 
