--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -250,3 +250,40 @@
     color: red;
   }
 }
+
+.card-stage-3-top {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+}
+
+.check-block {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+
+  input {
+    width: 3rem;
+    height: 3rem;
+    border: 0.1rem solid rgb(229, 229, 229);
+    border-radius: 0.5rem;
+  }
+
+  label {
+    font-size: 1.6rem;
+  }
+}
+
+.card-stage-3 {
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+}
+
+.card-stage-3-middle {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
