--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -46,6 +46,8 @@
   }
 
   input {
+    font-size: 1.6rem;
+    padding: 2rem !important;
     border: 0.1rem solid #e5e5e5;
     padding: 1.4rem 2rem;
     border-radius: 0.5rem;
