--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -287,3 +287,16 @@
   flex-direction: column;
   gap: 1.4rem;
 }
+
+.card-stage-3-bottom {
+  h4 {
+    font-size: 1.2rem;
+    font-weight: normal;
+    display: flex;
+    flex-direction: column;
+
+    span {
+      color: red;
+    }
+  }
+}
