--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -43,6 +43,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 3rem;
+  padding-bottom: 2rem;
 
   h2 {
     font-size: 2.2rem;
