--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -301,3 +301,77 @@
     }
   }
 }
+
+.card-stage-4 {
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+  }
+}
+
+.cd-top-4 {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+
+  h2 {
+    font-size: 1.2rem;
+    font-weight: normal;
+  }
+}
+
+.cd-middle-4 {
+  position: relative;
+  input {
+    opacity: 0;
+    height: 5rem;
+    cursor: pointer;
+    width: 16.2rem;
+    position: absolute;
+    left: 0;
+  }
+
+  button {
+    border-radius: 0.5rem;
+    border: 0.1rem solid $base-green;
+    background: transparent;
+    color: $base-green;
+    padding: 1.4rem 2rem;
+    height: 5rem;
+    width: 16.2rem;
+    font-size: 1.6rem;
+  }
+}
+
+.cd-bottom-4 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.file {
+  display: flex;
+  padding: 1.4rem 1.6rem 1.4rem 3rem;
+  justify-content: space-between;
+  align-items: center;
+  border: 0.1rem solid #e5e5e5;
+  border-radius: 0.5rem;
+
+  p {
+    font-size: 1.6rem;
+  }
+}
+
+.remove {
+  width: 1.8rem;
+  height: 1.8rem;
+  margin: 1rem;
+  cursor: pointer;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
