--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -2,6 +2,12 @@
   display: flex;
   justify-content: center;
   padding-bottom: 10rem;
+
+  .input-block {
+    span {
+      font-size: 1.2rem;
+    }
+  }
 }
 
 .sign-form {
@@ -122,6 +128,11 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
+
+  .spinner {
+    height: 3rem;
+    width: 3rem;
+  }
 }
 
 // MODAL WINDOWS
