--- a/src/styles/_cards.scss
+++ b/src/styles/_cards.scss
@@ -9,6 +9,11 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
+  .spinner {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 
 .card-btn {
