--- a/src/styles/_sign-up.scss
+++ b/src/styles/_sign-up.scss
@@ -4,10 +4,23 @@
   margin-bottom: 5rem;
   border: 0.1rem solid rgba(229, 229, 229, 1);
   border-radius: 0.5rem;
+  overflow: hidden;
 
+  .loader {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0%;
+    left: 0%;
+    background: rgba(255, 255, 255, 0.8);
+    width: 100%;
+    height: 100%;
+    z-index: 300;
+  }
   .spinner {
-    width: 3rem;
-    height: 3rem;
+    width: 6rem;
+    height: 6rem;
   }
 
   form {
@@ -21,6 +34,12 @@
   display: flex;
   flex-direction: column;
   gap: 5rem;
+}
+
+.error {
+  font-size: 1.8rem;
+  color: red;
+  font-weight: normal;
 }
 
 .reg-title {
