--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -321,7 +321,10 @@
   }
 }
 
-.cd-middle-4 {
+.cd-bottom-4 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   position: relative;
   input {
     opacity: 0;
@@ -331,23 +334,6 @@
     position: absolute;
     left: 0;
   }
-
-  button {
-    border-radius: 0.5rem;
-    border: 0.1rem solid $base-green;
-    background: transparent;
-    color: $base-green;
-    padding: 1.4rem 2rem;
-    height: 5rem;
-    width: 16.2rem;
-    font-size: 1.6rem;
-  }
-}
-
-.cd-bottom-4 {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
 }
 
 .file {
@@ -357,10 +343,20 @@
   align-items: center;
   border: 0.1rem solid #e5e5e5;
   border-radius: 0.5rem;
+  background: transparent;
+  transition: 0.4s all ease;
 
   p {
     font-size: 1.6rem;
   }
+
+  &.filled {
+    background: $base-grey;
+    transition: 0.4s all ease;
+  }
+}
+.card-stage-4-bottom {
+  justify-content: flex-end;
 }
 
 .remove {
