--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -371,3 +371,31 @@
     object-fit: contain;
   }
 }
+
+.card-stage-6 {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+}
+
+.cd-6-list {
+  display: flex;
+  flex-direction: column;
+
+  li {
+    padding: 1.4rem 3rem;
+    font-size: 1.6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    &:nth-child(2n - 1) {
+      background: #f2f2f2;
+    }
+  }
+}
+
+.cd-6-bottom {
+  .sign-btn {
+    max-width: 20rem;
+  }
+}
