--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -19,6 +19,24 @@
   border: 0.1rem solid #e5e5e5;
   border-radius: 0.5rem;
   padding: 5rem;
+  position: relative;
+  .loader {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.8);
+    z-index: 300;
+    width: 100%;
+    height: 100%;
+  }
+
+  .spinner {
+    height: 6rem;
+    width: 6rem;
+  }
 
   form {
     display: flex;
@@ -128,11 +146,6 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
-
-  .spinner {
-    height: 3rem;
-    width: 3rem;
-  }
 }
 
 // MODAL WINDOWS
