--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -53,3 +53,23 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 input::placeholder {
   color: rgba(195, 195, 195, 0.5);
 }
+
+.App {
+  .loader {
+    z-index: 1000;
+    background: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .spinner {
+    width: 6rem;
+    height: 6rem;
+  }
+}
