--- a/src/styles/_credit-modal.scss
+++ b/src/styles/_credit-modal.scss
@@ -30,6 +30,7 @@
 }
 
 .data-title {
+  cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -95,4 +96,189 @@
   &.bottom {
     border-bottom: 0.1rem solid #e5e5e5;
   }
+}
+
+.cs-1-middle {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.data-dropdown {
+  &.docs {
+    &.active {
+      max-height: 10rem;
+    }
+    h5 {
+      padding: 3rem;
+      font-size: 1.6rem;
+      text-align: center;
+      font-weight: normal;
+
+      &.right {
+        border-right: 0.1rem solid #e5e5e5;
+      }
+      &.left {
+        border-left: 0.1rem solid #e5e5e5;
+      }
+    }
+  }
+}
+
+.cs-2-input {
+  input {
+    border: none;
+    padding: 0 !important;
+  }
+}
+
+.cs-2-title {
+  font-size: 2.2rem;
+  text-align: left;
+}
+
+.input-data {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 3rem 2rem;
+  padding-top: 0;
+
+  h6 {
+    font-size: 2.2rem;
+    color: $base-green;
+    font-weight: normal;
+  }
+}
+
+.data-img {
+  width: 2.6rem;
+  height: 2.6rem;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  img {
+    pointer-events: none;
+  }
+}
+
+.cs-2-left {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+
+.term-inputs {
+  display: flex;
+  align-items: center;
+  gap: 1.4rem;
+  label {
+    font-size: 1.6rem;
+    padding: 1.4rem 2rem;
+    border: 0.1rem solid #e5e5e5;
+    border-radius: 0.5rem;
+    color: #000;
+    transition: 0.2s all ease;
+
+    &.active {
+      border-color: $base-green;
+      color: $base-green;
+      transition: 0.2s all ease;
+    }
+    input {
+      display: none;
+    }
+  }
+}
+
+.cs-2-bottom {
+  justify-content: flex-start;
+}
+
+.cs-2 {
+  form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+  }
+}
+.cs-2-right {
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+
+.cs-2-right-inner {
+  height: 100%;
+  position: relative;
+  background: $dark-green;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 3rem;
+
+  h5 {
+    font-size: 2.2rem;
+    color: #fff;
+    text-align: center;
+  }
+  h6 {
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: #fff;
+    text-align: center;
+  }
+}
+
+.abs-img {
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  img {
+    max-width: 50.8rem;
+    max-height: 24.6rem;
+  }
+}
+
+.cs-2-right-top {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cs-2-right-middle {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0 3rem;
+  border: 0.1rem solid #e5e5e5;
+  border-radius: 0.5rem;
+}
+
+.cs-2-right-middle-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.4rem;
+  padding: 2rem 0;
+
+  &:first-child {
+    border-right: 0.1rem solid #e5e5e5;
+  }
+}
+
+.payment {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  max-width: 25.4rem;
 }
