--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -73,3 +73,97 @@ input::placeholder {
     height: 6rem;
   }
 }
+
+input[type="range"] {
+  -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
+  width: 100%; /* Specific width is required for Firefox. */
+  background: transparent; /* Otherwise white in Chrome */
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+}
+
+input[type="range"]:focus {
+  outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+}
+
+input[type="range"]::-ms-track {
+  width: 100%;
+  cursor: pointer;
+
+  /* Hides the slider so custom styles can be added */
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 1px solid #e5e5e5;
+  height: 1.6rem;
+  width: 1.6rem;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+  margin-top: -0.6rem; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+}
+
+/* All the same stuff for Firefox */
+input[type="range"]::-moz-range-thumb {
+  border: 1px solid #e5e5e5;
+  height: 1.6rem;
+  width: 1.6rem;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+  margin-top: -0.6rem;
+}
+
+/* All the same stuff for IE */
+input[type="range"]::-ms-thumb {
+  border: 1px solid #e5e5e5;
+  height: 1.6rem;
+  width: 1.6rem;
+  border-radius: 50%;
+  background: #ffffff;
+  cursor: pointer;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 0.4rem;
+  cursor: pointer;
+  background: $base-green;
+}
+
+input[type="range"]:focus::-webkit-slider-runnable-track {
+  background: $base-green;
+}
+
+input[type="range"]::-moz-range-track {
+  width: 100%;
+  height: 0.4rem;
+  cursor: pointer;
+  background: $base-green;
+}
+
+input[type="range"]::-ms-track {
+  width: 100%;
+  height: 0.4rem;
+  cursor: pointer;
+  background: $base-green;
+  border-color: transparent;
+  border-width: 16px 0;
+  color: transparent;
+}
+input[type="range"]::-ms-fill-lower {
+  background: $base-green;
+}
+input[type="range"]:focus::-ms-fill-lower {
+  background: $base-green;
+}
+input[type="range"]::-ms-fill-upper {
+  background: $base-green;
+}
+input[type="range"]:focus::-ms-fill-upper {
+  background: $base-green;
+}
