--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -21,3 +21,13 @@
     }
   }
 }
+
+// MEDIA
+
+@media screen and (max-width: 600px) {
+  .footer {
+    h2 {
+      font-size: 1.2rem;
+    }
+  }
+}
