--- a/src/styles/_cards.scss
+++ b/src/styles/_cards.scss
@@ -22,3 +22,16 @@
   display: flex;
   align-items: center;
 }
+
+// MEDIA
+
+@media screen and (max-width: 720px) {
+  .card-title {
+    grid-template-columns: 1fr;
+
+    * {
+      justify-self: center;
+      text-align: center;
+    }
+  }
+}
