--- a/src/styles/_contact-us.scss
+++ b/src/styles/_contact-us.scss
@@ -38,3 +38,26 @@
   flex-direction: column;
   gap: 3rem;
 }
+
+// MEDIA
+@media screen and (max-width: 720px) {
+  .contact-us-inner {
+    padding-top: 3rem;
+
+    h2 {
+      font-size: 1.8rem;
+      padding-bottom: 0;
+    }
+    textarea {
+      max-height: 15rem;
+    }
+  }
+
+  .cu-bottom {
+    flex-direction: column;
+    align-items: center;
+    button {
+      max-width: unset;
+    }
+  }
+}
