--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -26,3 +26,29 @@
     max-width: 26.2rem;
   }
 }
+
+// MEDIA
+
+@media screen and (max-width: 1200px) {
+  .profile-inner .form-bottom {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .profile-inner .form-bottom {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .profile-inner {
+    padding-top: 3rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .profile-inner .form-bottom {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
