--- a/src/styles/_side.scss
+++ b/src/styles/_side.scss
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  // min-height: 100vh;
   height: 100%;
 }
 
@@ -17,7 +16,6 @@
   height: 100%;
   max-width: 0rem;
   width: 100%;
-  background: $base-green;
   overflow-x: hidden;
   overflow-y: auto;
   transition: 0.4s all ease;
@@ -33,6 +31,8 @@
 }
 
 .side-inner {
+  max-width: 40rem;
+  background: $base-green;
   ul {
     display: flex;
     flex-direction: column;
@@ -101,5 +101,48 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+}
+
+.side-wrapper {
+  height: 100%;
+}
+
+.side-top-li {
+  display: flex;
+  background: $dark-green;
+  align-items: center;
+  padding-right: 3rem;
+}
+.side-quit {
+  display: none;
+}
+// MEDIA
+
+@media screen and (max-width: 1300px) {
+  .side-quit {
+    display: block;
+  }
+  .home {
+    grid-template-columns: 1fr;
+  }
+
+  .side {
+    max-width: 0;
+    width: 100vw;
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    &.active {
+      max-width: 100vw;
+      width: 100%;
+    }
+  }
+
+  .side-wrapper {
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
   }
 }
