--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -35,6 +35,13 @@
 }
 
 // MEDIA
+@media screen and (max-width: 1100px) {
+  .home-table-wrapper {
+    overflow: auto;
+    width: 95rem;
+    margin: 0 auto;
+  }
+}
 @media screen and (max-width: 1000px) {
   .home-table-wrapper {
     overflow: auto;
