--- a/src/styles/_credit-modal.scss
+++ b/src/styles/_credit-modal.scss
@@ -254,6 +254,12 @@
   gap: 1rem;
 }
 
+.cs-2-right-bottom {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+}
+
 .cs-2-right-middle {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -268,7 +274,7 @@
   justify-content: center;
   align-items: center;
   gap: 1.4rem;
-  padding: 2rem 0;
+  padding: 2rem 1rem;
 
   &:first-child {
     border-right: 0.1rem solid #e5e5e5;
@@ -285,4 +291,125 @@
 
 .cs-4-bottom {
   align-items: center;
+}
+
+// MEDIA
+
+@media screen and (max-width: 1100px) {
+  .cs-1-middle {
+    gap: 1rem;
+  }
+  .data-dropdown {
+    grid-template-columns: 1fr;
+    background: none;
+    gap: 1rem;
+    margin-top: 1rem;
+
+    &.active {
+      max-height: 70rem;
+    }
+  }
+  .dropdown-inner {
+    border: 0.1rem solid #e5e5e5;
+    border-radius: 0.5rem;
+    height: 100%;
+    padding: 1.5rem 1rem;
+    gap: 0rem;
+    min-height: unset;
+
+    h2 {
+      font-size: 1.6rem;
+    }
+  }
+  .cs-2 form {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .data-dropdown.docs {
+    h5 {
+      border: 0.1rem solid #e5e5e5;
+      border-radius: 0.5rem;
+    }
+    &.active {
+      max-height: 40rem;
+    }
+  }
+  .cd-btn {
+    max-width: unset;
+    width: 100%;
+  }
+  .data-title {
+    padding: 1.4rem 1rem;
+    h4 {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      font-size: 1.2rem;
+    }
+  }
+  .cs-2-right-inner h5,
+  .input-data h6,
+  .modal-top h2 {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .cs-2-right-middle {
+    margin: 0;
+  }
+  .cs-2-right-inner {
+    padding: 2rem 1rem;
+  }
+  .cs-1 form {
+    gap: 2rem;
+  }
+  .data-dropdown.active {
+    border: none;
+  }
+  .data-dropdown.docs h5 {
+    font-size: 1.2rem;
+    padding: 2rem 1rem;
+  }
+}
+@media screen and (max-width: 700px) {
+  .cs-2-right-middle {
+    grid-template-columns: 1fr;
+    border: none;
+  }
+  .cs-2-right-middle-content:first-child {
+    border: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .term-inputs {
+    flex-direction: column;
+
+    label {
+      width: 100%;
+    }
+  }
+
+  .input-data {
+    display: grid;
+    grid-template-areas:
+      "tp tp"
+      "bt1 bt2";
+    h6 {
+      grid-area: tp;
+      text-align: center;
+    }
+    .data-img {
+      width: 5rem;
+      height: 5rem;
+    }
+    .data-img:first-child {
+      grid-area: bt1;
+    }
+    .data-img:last-child {
+      grid-area: bt2;
+    }
+  }
 }
