--- a/src/styles/_custom-select.scss
+++ b/src/styles/_custom-select.scss
@@ -66,3 +66,18 @@
   left: calc(100% - 3rem);
   pointer-events: none;
 }
+
+// MEDIA
+
+@media screen and (max-width: 1100px) {
+  .custom-select ul li {
+    font-size: 1.2rem;
+  }
+  .custom-select input {
+    padding: 1.4rem 1rem;
+    font-size: 1.2rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
