--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -1,10 +1,13 @@
 .modal-container {
-  max-width: 134rem;
-  padding: 0 3rem;
-  margin: 0 auto;
+  max-width: 85%;
+  // padding: 0 3rem;
+  // margin: 0 auto;
 }
 
 .modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top: 0;
   left: 0;
@@ -26,7 +29,7 @@
 .modal-inner {
   display: flex;
   align-items: center;
-  padding: 10% 0;
+  // padding: 10% 0;
 }
 
 .modal-window {
@@ -397,5 +400,109 @@
 .cd-6-bottom {
   .sign-btn {
     max-width: 20rem;
+  }
+}
+
+.modal-middle-mobile {
+  display: none;
+}
+
+// MEDIA
+
+@media screen and (max-width: 1300px) {
+  .modal-window {
+    max-height: 82.6rem;
+    overflow-y: auto;
+    margin: 0 auto;
+  }
+  .modal-middle {
+    display: none;
+  }
+  .modal-middle-mobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .card-stage-2 .form-top,
+  .card-stage-3-top {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .card-stage-6 {
+    gap: 3rem;
+  }
+  .modal .cu-bottom,
+  .card-stage-3 form,
+  .card-stage-4 form {
+    gap: 2rem;
+  }
+  .cd-6-bottom .sign-btn {
+    max-width: unset;
+  }
+  .cd-6-list li {
+    padding: 1.4rem 1rem;
+    font-size: 1.2rem;
+  }
+  .cd-bottom-4 p,
+  .check-block label {
+    font-size: 1.2rem;
+  }
+  .modal-window {
+    padding: 2rem;
+  }
+  .file {
+    padding: 1.4rem 1rem;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .card-description {
+    gap: 2rem;
+  }
+  .cd-bottom {
+    grid-template-columns: 1fr;
+    border: none;
+    gap: 1rem;
+    padding: 2rem 0;
+  }
+  .cd-bottom-content {
+    border: 0.1rem solid #e5e5e5 !important;
+    border-radius: 0.5rem;
+    padding: 1.5rem 0rem;
+  }
+  .card-description {
+    padding-bottom: 1rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .cd-bottom-content h2 {
+    font-size: 1.8rem;
+  }
+  .cd-img {
+    justify-self: center;
+  }
+  .cd-text {
+    h2 {
+      font-size: 1.8rem;
+      text-align: center;
+    }
+
+    h3 {
+      text-align: center;
+    }
+  }
+  .card-stage-2 .form-top,
+  .card-stage-3-top {
+    grid-template-columns: 1fr;
+    input {
+      font-size: 1.2rem;
+    }
+  }
+  .cd-top {
+    grid-template-columns: 1fr;
   }
 }
