--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -217,6 +217,13 @@
 
 // MEDIA
 
+@media screen and (max-width: 1100px) {
+  .input-block input,
+  .sign-btn h3 {
+    font-size: 1.2rem;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .input-block input {
     font-size: 1.2rem;
