--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -15,6 +15,7 @@
   tr {
     display: grid;
     grid-template-columns: repeat(5, minmax(18rem, 1fr));
+    align-items: center;
     gap: 3rem;
     padding: 1.7rem 0;
     border: 0.1rem solid #f2f2f2;
