--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,6 +13,7 @@
   width: 100%;
 
   tr {
+    min-height: 8rem;
     display: grid;
     grid-template-columns: repeat(5, minmax(18rem, 1fr));
     align-items: center;
