--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -177,6 +177,62 @@
   }
 }
 
+.user {
+  position: relative;
+
+  .user-dropdown {
+    border-radius: 1rem;
+    ul {
+      display: flex;
+      flex-direction: column;
+
+      li {
+        padding: 1rem;
+        background: transparent;
+        transition: 0.4s all ease;
+        &:hover {
+          background: #bebebe;
+          transition: 0.4s all ease;
+        }
+      }
+    }
+    a {
+      font-size: 1.4rem;
+      text-align: center;
+      display: block;
+    }
+
+    background: #dbdbdb;
+    z-index: 250;
+    position: absolute;
+    right: 0;
+    top: calc(100% + 0.6rem);
+    width: 100%;
+    overflow: hidden;
+    max-height: 0;
+    transition: 0.4s all ease;
+  }
+
+  &.active {
+    background-color: #c7c7c7;
+    transition: 0.4s all ease;
+    .user-dropdown {
+      max-height: 15rem;
+      transition: 0.4s all ease;
+    }
+  }
+}
+
+.sign-out-btn {
+  font-size: 1.4rem;
+  text-align: center;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  height: 100%;
+}
+
 // MEDIA
 
 @media screen and (max-width: 1000px) {
