--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -171,6 +171,17 @@
   }
 }
 
+.recovery-inner {
+  position: relative;
+  .loader {
+    border-radius: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .recovery-container {
   width: 100%;
   max-width: 58rem;
