styling mistake handled

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -267,6 +267,11 @@
       .user-arrow {
         display: none;
       }
+
+      .user-dropdown {
+        width: 15rem;
+        right: 0;
+      }
     }
     .lang-dropdown {
       width: 10rem;
