--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -324,10 +324,37 @@
   }
 }
 
-.cd-bottom-4 {
+.cd-4-files {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  li {
+    border-radius: 0.5rem;
+    padding: 1.4rem 3rem;
+    border: 0.1rem solid #e5e5e5;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    justify-content: space-between;
+
+    h4 {
+      font-size: 1.6rem;
+      font-weight: normal;
+    }
+
+    .remove {
+      width: 1.8rem;
+      height: 1.8rem;
+
+      img {
+        width: 1.8rem;
+        height: 1.8rem;
+      }
+    }
+  }
+}
+
+.cd-bottom-4 {
   position: relative;
   input {
     opacity: 0;
@@ -336,6 +363,16 @@
     width: 16.2rem;
     position: absolute;
     left: 0;
+  }
+
+  label {
+    color: $base-green;
+    display: inline-block;
+    font-size: 1.6rem;
+    padding: 1.4rem 3rem;
+    border: 0.1rem solid $base-green;
+    border-radius: 0.5rem;
+    cursor: pointer;
   }
 }
 
