--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -52,7 +52,7 @@
   }
   .home-table {
     overflow-x: hidden;
-    white-space: nowrap;
+    // white-space: nowrap;
 
     tbody {
       display: table;
