--- a/src/styles/_recovery.scss
+++ b/src/styles/_recovery.scss
@@ -22,6 +22,13 @@
     background: #f2f2f2;
     padding-right: 5rem;
   }
+  .rel-img {
+    position: absolute;
+    left: calc(100% - 4rem);
+    top: 50%;
+    transform: translateY(50%);
+    cursor: pointer;
+  }
 }
 
 .p-input-img {
