--- a/src/styles/_sing-in.scss
+++ b/src/styles/_sing-in.scss
@@ -12,7 +12,7 @@
 
 .sign-form {
   max-width: 52rem;
-  max-height: 72.2rem;
+  // max-height: 72.2rem;
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.6);
