--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -444,6 +444,40 @@
   display: none;
 }
 
+.reject {
+  position: relative;
+
+  .reason {
+    z-index: 200;
+    width: 100%;
+    border-radius: 0.5rem;
+    position: absolute;
+    padding: 2rem;
+    right: calc(100% - 6rem);
+    top: -50%;
+    height: 15rem;
+    width: 0;
+    opacity: 0;
+    overflow: auto;
+    background: #f2f2f2;
+    border: 0.1rem solid #e5e5e5;
+    transition: 0.3s all ease;
+
+    h4 {
+      font-size: 1.4rem;
+      text-align: left;
+    }
+  }
+
+  &:hover {
+    .reason {
+      width: 25rem;
+      opacity: 1;
+      right: calc(100% + -3rem);
+    }
+  }
+}
+
 // MEDIA
 
 @media screen and (max-width: 1300px) {
