--- a/src/styles/_side.scss
+++ b/src/styles/_side.scss
@@ -145,16 +145,16 @@
   }
 
   .side {
-    max-width: 0;
-    width: 100vw;
+    max-width: 100vw;
+    width: 100%;
     z-index: 1000;
     position: fixed;
     top: 0;
     left: 0;
 
     &.active {
-      max-width: 100vw;
-      width: 100%;
+      max-width: 0;
+      min-width: unset;
     }
   }
 
