--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -322,6 +322,7 @@
       width: 100%;
       display: grid;
       grid-template-columns: 0.1fr 1fr;
+      gap: 0;
     }
     .nav-logo {
       justify-self: center;
