--- a/src/styles/_contact-us.scss
+++ b/src/styles/_contact-us.scss
@@ -44,13 +44,20 @@
 @media screen and (max-width: 720px) {
   .contact-us-inner {
     padding-top: 3rem;
+    .cu-bottom {
+      align-items: unset;
+    }
 
     h2 {
       font-size: 1.8rem;
       padding-bottom: 0;
     }
-    textarea {
-      max-height: 15rem;
+
+    form {
+      textarea {
+        max-height: 15rem;
+        font-size: 1.2rem;
+      }
     }
   }
 
