--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -202,3 +202,36 @@ input[type="range"]:focus::-ms-fill-upper {
     padding: 0 3rem;
   }
 }
+
+@media screen and (max-width: 440px) {
+  .captcha-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .captcha {
+    transform: scale(0.91) translateX(-1.4rem);
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .captcha {
+    transform: scale(0.81) translateX(-0.4rem);
+  }
+  .captcha-wrapper {
+    width: 3rem;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .captcha {
+    transform: scaleX(0.71) scaleY(0.8) translateX(-3rem);
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .captcha {
+    transform: scaleX(0.65) scaleY(0.75) translateX(-1rem);
+  }
+}
