--- a/src/styles/_recovery.scss
+++ b/src/styles/_recovery.scss
@@ -89,8 +89,38 @@
 }
 
 .success {
-  color: $base-green;
-  font-size: 2.2rem;
+  h1 {
+    color: $base-green;
+    font-size: 2.2rem;
+  }
+
+  &.error {
+    .wrapper {
+      animation: fade-in 2s infinite ease;
+      width: 9.6rem;
+      height: 9.6rem;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    h1 {
+      color: rgb(222, 41, 38);
+    }
+  }
+}
+
+// ANIMO
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    transform: translateY(5rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
 }
 
 // MEDIA
