--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,4 +1,4 @@
-.line-block {
+.lines-block {
   position: relative;
   width: 3rem;
   height: 2rem;
@@ -51,6 +51,7 @@
     &::after {
       opacity: 1;
       left: -48%;
+      top: 0.9rem;
       transform: rotate(-90deg);
       transition: all 0.3s ease;
     }
