--- a/src/styles/_modal-form.scss
+++ b/src/styles/_modal-form.scss
@@ -476,6 +476,19 @@
   }
 }
 
+.cd-img {
+  max-width: 22rem;
+  max-height: 13.8rem;
+  width: 100%;
+  height: 100%;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
+
 // MEDIA
 
 @media screen and (max-width: 1300px) {
