--- a/src/styles/_recovery.scss
+++ b/src/styles/_recovery.scss
@@ -24,6 +24,24 @@
 .input-block-outer {
   max-width: 34rem;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+
+  span {
+    color: red;
+  }
+}
+
+.sign-form {
+  .input-block-outer {
+    max-width: unset;
+
+    .input-block {
+      position: relative;
+      height: 8.8rem;
+    }
+  }
 }
 
 .rel-block {
@@ -133,6 +151,11 @@
 }
 
 @media screen and (max-width: 600px) {
+  .sign-form {
+    .p-input-img {
+      left: calc(100% - 6rem);
+    }
+  }
   .p-recovery-content {
     display: grid;
     grid-template-columns: 1fr;
