--- a/src/scss/_recovery.scss
+++ b/src/scss/_recovery.scss
@@ -45,11 +45,12 @@
 }
 
 .rel-block {
-  position: relative;
+  // position: relative;
   max-height: 7.8rem;
   input {
     background: #f2f2f2;
     padding-right: 5rem;
+    width: 100%;
   }
   .rel-img {
     position: absolute;
@@ -58,6 +59,12 @@
     transform: translateY(50%);
     cursor: pointer;
   }
+}
+
+.sp-outer {
+  position: relative;
+  gap: 2rem;
+  max-width: unset;
 }
 
 .p-input-img {
