payment api integrated

--- a/src/scss/_sing-in.scss
+++ b/src/scss/_sing-in.scss
@@ -208,6 +208,11 @@
   font-size: 2.2rem;
 }
 
+.recovery-1 {
+  position: relative;
+  overflow: hidden;
+}
+
 .recovery-1,
 .recovery-2 {
   form {
