--- a/src/scss/_sing-in.scss
+++ b/src/scss/_sing-in.scss
@@ -234,6 +234,13 @@
 // MEDIA
 
 @media screen and (max-width: 1100px) {
+  .forget h3 {
+    font-size: 1.2rem;
+  }
+  .recovery-1 form,
+  .recovery-2 form {
+    gap: 2rem;
+  }
   .input-block input,
   .sign-btn h3 {
     font-size: 1.2rem;
