--- a/src/scss/_custom-select.scss
+++ b/src/scss/_custom-select.scss
@@ -3,6 +3,9 @@
   display: inline-block;
 
   input {
+    &:read-only {
+      background-color: #fff !important;
+    }
     width: 100%;
     padding: 2rem;
     border-radius: 0.5rem;
