--- a/src/scss/_modal-form.scss
+++ b/src/scss/_modal-form.scss
@@ -3,6 +3,10 @@
   margin: auto 0;
 }
 
+.alert {
+  font-size: 1.2rem;
+}
+
 .modal {
   display: flex;
   justify-content: center;
@@ -18,6 +22,10 @@
   padding: 5rem 0;
   overflow-y: auto;
   z-index: 10000;
+
+  input:read-only {
+    background: #f2f2f2;
+  }
 
   &.active {
     opacity: 1;
