--- a/src/scss/_modal-form.scss
+++ b/src/scss/_modal-form.scss
@@ -521,6 +521,11 @@
   }
 }
 
+@media screen and (max-height: 1000px) {
+  .modal {
+    padding: 10rem 0;
+  }
+}
 @media screen and (max-width: 1100px) {
   .card-stage-6 {
     gap: 3rem;
