success & error animo not infinite now

--- a/src/scss/_recovery.scss
+++ b/src/scss/_recovery.scss
@@ -117,7 +117,7 @@
 
   &.error {
     .wrapper {
-      animation: fade-in 2s infinite ease;
+      animation: fade-in 2s ease;
       width: 9.6rem;
       height: 9.6rem;
       img {
