--- a/src/scss/_success.scss
+++ b/src/scss/_success.scss
@@ -28,7 +28,7 @@
   stroke: $base-green;
   stroke-dashoffset: 745.74853515625;
   stroke-dasharray: 745.74853515625;
-  animation: dash 2s ease-out forwards infinite;
+  animation: dash 2s ease-out forwards;
 }
 
 @keyframes dash {
