--- a/src/scss/_side.scss
+++ b/src/scss/_side.scss
@@ -147,7 +147,7 @@
     max-width: 100vw;
     width: 100%;
     z-index: 1000;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
 
