--- a/src/scss/_credit-modal.scss
+++ b/src/scss/_credit-modal.scss
@@ -88,6 +88,9 @@
     font-size: 2.2rem;
     font-weight: normal;
     text-align: center;
+    * {
+      font-size: 2.2rem !important;
+    }
   }
 
   &.right {
